client/styles.scss
/* ... */
  .validator-details {
    .moniker {
      font-size: 180%;
      margin: 0.25em 0;
    }

    .validator-avatar {
      max-width: 150px;
      margin: 0 auto;
      img.img-fluid {
        max-width: 100% !important;
      }
    }

    .card {
      margin-bottom: 1em;
    }

    .card-body h3 .badge.badge-danger {
      margin-right: 0.5em;
    }

    ul.nav {
      margin-bottom: 0.8em;
    }
  }

  .address.copy {
    max-width: calc(100% - 1.2em);
  }

  .account-distributions .progress {
    height: 1.5em !important;
    border-radius: 0.2em;
    margin-bottom: 0.8em;

    .row {
      padding-bottom: 0.2em;
    }
  }

  #account {
    .infinity {
      display: inline-block;
      margin-right: 0.5em;
      height: 1em;
      width: 1em;
      transform: translateY(2px);
      border-radius: 0.2em;
    }

    .available {
      background-color: $cyan;
    }

    .delegated {
      background-color: $indigo;
    }

    .unbonding {
      background-color: $blue;
    }

    .rewards {
      background-color: $teal;
    }

    .commission {
      background-color: $yellow;
    }

    .total .value {
      font-size: 1.5em;
      transform: translateY(3px);
    }

    .coin-dropdown{
    display: flex;
    vertical-align: middle !important;
    overflow: visible;
    text-align: center;
    line-height: normal;

   }
   .account-dropdown{
    padding: 0 1rem 0 0.5rem;
    margin-top: -3px;
    color: $primary;
    font-weight: bold;
    position:relative;
    z-index: 1;


    .dropdown-toggle{
      background-color:$primary;
      border: solid 0.05rem $primary;

    }

   }

  }

  .vp-diff {
    display: inline-block;
    transform: translateY(-5px);
  }

  div {
    &.block-info, &.tx-info, &.delegation-info {
      padding-top: 0.4rem;
      padding-bottom: 0.4rem;
      border-bottom: 1px solid $gray-300;
    }
  }

  .tx-info.invalid {
    background-color: rgba(237, 20, 61, 0.2) !important;
  }

  #transaction .error .alert-danger {
    margin-bottom: 0.5em;
  }

  .error .alert-danger {
    margin-bottom: 0;
  }

  div {
    &#block-table div.block-info:nth-child(2n), &.transactions-list div.tx-info:nth-child(2n), &.delegation-info:nth-child(2n) {
      background-color: rgba(0, 0, 0, 0.05);
    }

    &.transactions-list div.tx-info .activity {
      overflow-x: auto;

      .card-body {
        overflow-x: auto;
        padding: 0.5rem;
        margin-bottom: 0.5rem;
      }
    }
  }

  .activity .card-body p {
    margin-bottom: 0;
  }

  div.transactions-list div.tx-info .activity .card-body ul {
    list-style: none;
    padding-left: 1em;
  }

  .error .alert .badge {
    white-space: inherit;
    text-align: left;
  }

  div {
    &.transactions-list div.tx-info .badge:not(:last-child) {
      margin-bottom: 0.2rem;
    }

    &#block-table div.header, &.transactions-list div.header {
      padding-top: 0.3rem;
      border-top: 1px solid $gray-300;
      border-bottom: 2px solid $gray-300;
    }
  }

  .blocks-list {
    margin-top: 0.2em;

    .block {
       width: 1.5em;
    height: 1.5em;
    display: inline-block;
    margin-right: 0.2em;
    border: 0.1em solid $primary;
    box-shadow: none;
    border-radius: 3px;

      .full {
        background-color: $primary;
        height: 100%;
        width: 100%;
      }

      .empty {
        height: 100%;
        width: 100%;
      }
    }
  }

  .power-history {
    .voting-power {
      font-size: 160%;
      position: relative;
      top: -4px;
      transform: initial !important;
    }

    .card .card-footer {
      font-size: 85%;
    }
  }

  .label {
    font-weight: bold;
  }

  .voting-power-card h1 {
    display: inline-block;
    margin-right: 0.3em;
  }

  .missed-table, div#voting-power-dist .card {
    margin-top: 0.5em;
  }

  #block ul.tx-types {
    height: 3.5em;
    display: block;
    overflow-x: auto;
    white-space: nowrap;

    li {
      display: inline-block;
      margin: 0 0.75em 0.5em 0 !important;
    }

    .nav-link {
      cursor: pointer;
    }
  }

  .tx-list-homepage {
    overflow-y: hidden;
    overflow-x: auto;
    height: 52em;
  }
  
  @media only screen and (max-width: 767px) {
    div {
      &#main, &#transaction, &#block {
        padding-bottom: 4.85rem;
      }
    }

    .flip-clock-wrapper ul {
      width: 37px;
      height: 50%;
      line-height: 50%;
    }

    .validator-list .card.card-body {
      margin-bottom: 0.8rem;
    }

    .proposal .tally-result-table .card.card-body {
      margin: 0.4rem 0.8rem;
    }

    .mobile-menu li {
      width: 16.66%;

      a {
        text-align: center;
      }
    }

    div.validator-list div.validator-info {
      .moniker-avatar-list {
        height: 48px;
        float: left;
        
        .paper {
          height: 48px !important;
          width: 48px !important;
        }
      }

      div.data {
        span.moniker {
          float: left;
          margin-left: 3px;
          max-width: 80%;
        }

        &.voting-power, &.status {
          margin-top: -25px;
        }
      }
    }

    #block ul.tx-types .nav-link {
      padding: 0.5em 0;
    }
  }
/* ... */

